@@ -368,7 +368,7 @@ int32_t viewport_interaction_get_item_right(const ScreenCoordsXY& screenCoords, 
             size_t argPos = 0;
             set_map_tooltip_format_arg(argPos, rct_string_id, STR_MAP_TOOLTIP_BANNER_STRINGID_STRINGID);
             argPos += sizeof(rct_string_id);
-            argPos += banner->FormatTextTo(gMapTooltipFormatArgs + argPos);
+            argPos += banner->FormatTextTo(gMapTooltipFormatArgs + argPos, /*addColour*/ true);
             set_map_tooltip_format_arg(argPos, rct_string_id, STR_MAP_TOOLTIP_STRINGID_CLICK_TO_MODIFY);
             argPos += sizeof(rct_string_id);
             set_map_tooltip_format_arg(argPos, rct_string_id, sceneryEntry->name);
