@@ -20,6 +20,7 @@
 - Fix: [#11246] Fix Various Import/Export issues with Boat locations, balloon frame number.
 - Fix: Small red gardens in RCT1 saves are imported in the wrong colour.
 - Fix: [#11258] Properly remove format codes from imported strings.
+- Fix: [#11286] Fix banner tooltip colour
 - Improved: [#11157] Slimmer virtual floor lines.
 
 0.2.5 (2020-03-24)
